--- a/src/App.css
+++ b/src/App.css
@@ -23,12 +23,17 @@ h1{
 table{
     border-collapse: collapse;
     width: 100%;
+    height: 60vh;
     margin-top: 2rem;
     margin-left: 1em;
-    background-color: rgb(206, 228, 237);
+    font-weight: 5rem;
+
+   
 }
 th,td{
     border: 1px solid black;
     padding: 8px;
     text-align: left;
+    color: white;
+    background-color: lightseagreen;
 }
