--- a/src/App.css
+++ b/src/App.css
@@ -19,21 +19,34 @@ nav input {
 }
 h1{
     margin: 1rem;
+    margin-left: 4.3rem;
 }
 table{
     border-collapse: collapse;
-    width: 100%;
+    width: 90vw;
     height: 60vh;
     margin-top: 2rem;
     margin-left: 1em;
-    font-weight: 5rem;
-
-   
+    font-weight: bold;
+    font-size: 1.1rem;
+    background-color: lightseagreen;
+}
+#table-container{
+    display: flex;
+    justify-content: center;
 }
 th,td{
     border: 1px solid black;
     padding: 8px;
     text-align: left;
     color: white;
-    background-color: lightseagreen;
+ 
+}
+
+th{
+    cursor: pointer;
+}
+th:hover{
+    background-color: white;
+    color: lightseagreen;
 }
