--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-nav {
-    background-color: lightseagreen;
-    height: 4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-nav input {
-    width: 30vw;
-    height: 2rem;
-    outline: none;
-}
-h1{
-    margin: 1rem;
-    margin-left: 4.3rem;
-}
-table{
-    border-collapse: collapse;
-    width: 90vw;
-    height: 60vh;
-    margin-top: 2rem;
-    margin-left: 1em;
-    font-weight: bold;
-    font-size: 1.1rem;
-    background-color: lightseagreen;
-}
-#table-container{
-    display: flex;
-    justify-content: center;
-}
-th,td{
-    border: 1px solid black;
-    padding: 8px;
-    text-align: left;
-    color: white;
- 
-}
-
-th{
-    cursor: pointer;
-}
-th:hover{
-    background-color: white;
-    color: lightseagreen;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
